syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Global.Parameter.Protos";
option java_multiple_files = true;
option objc_class_prefix = "HLW";
option java_package = "com.saphamrah.protos";
option java_outer_classname = "ParameterProto";

package Global;


service Parameter {
  rpc GetParameter (ParameterRequest) returns (ParameterReplyList);
}


message ParameterRequest {
  string  RowTitleType = 1;
  string	SellOrganizationCenterID = 2;
  string	StoreCenterID = 3;
  string	DateProgram = 4;

}

message ParameterReply {
  int32	ParameterID = 1;
  int32	ParameterType = 2;
  string	Name = 3;
  int32	GetProgram =4;
}

message ParameterReplyList{
  repeated ParameterReply Parameters = 1;
}